# swifttools

./: .gitignore  .pre-commit-config.yaml  ChangeLog.md  LICENSE  README.md  pyproject.toml  ruff.toml  setup.cfg  setup.py
.github/workflows/: deploy.yml  lint.yml
examples/: Query existing job example.ipynb  Swift Async Get Gather Example Notebook.ipynb  Swift Async Queueing Example Notebook.ipynb  Swift Calendar Example Notebook.ipynb  Swift GUANO Example Notebook.ipynb  Swift Observation Query Example Notebook.ipynb  Swift Plan Query Example Notebook.ipynb  Swift SAA Example Notebook.ipynb  Swift TOO Requests Example Notebook.ipynb  Swift TOO submission Example.ipynb  Swift_Clock Example Notebook.ipynb  Swift_Data Example Notebook.ipynb  Swift_Resolve example notebook.ipynb  Target Visibility Calculator Example.ipynb  UVOT_mode example notebook.ipynb
swifttools/: __init__.py  version.py
swifttools/swift_too/: ChangeLog.md  README.md  __init__.py  api_common.py  api_daterange.py  api_functions.py  api_resolve.py  api_skycoord.py  api_status.py  common.py  query_job.py  swift_calendar.py  swift_clock.py  swift_data.py  swift_datetime.py  swift_guano.py  swift_instruments.py  swift_obsid.py  swift_obsquery.py  swift_planquery.py  swift_requests.py  swift_resolve.py  swift_saa.py  swift_schemas.py  swift_toorequest.py  swift_uvot.py  swift_visquery.py  too_client.py  too_status.py  version.py
swifttools/swift_too/base/: back_compat.py  common.py  constants.py  functions.py  repr.py  resolve.py  schemas.py  status.py
swifttools/swift_too/swift/: calendar.py  clock.py  data.py  datetime.py  enums.py  guano.py  instruments.py  obsquery.py  planquery.py  requests.py  resolve.py  saa.py  schemas.py  toorequest.py  uvot.py  visquery.py
swifttools/ukssdc/: __init__.py  main.py  version.py
swifttools/ukssdc/APIDocs/: fixHTMLMD.pl  index.php  renderMD.php
swifttools/ukssdc/access/: SXPS.py  __init__.py  download.py
swifttools/ukssdc/data/: DBFilter.py  GRB.py  Jamie_BackEnd.py  SXPS.py  __init__.py  datarequest_base.py  download.py  obsData.py  static.py
swifttools/ukssdc/query/: DBFilter.py  GRB.py  SXPS.py  __init__.py  dataquery_base.py  obsData.py
swifttools/ukssdc/xrt_prods/: __init__.py  prod_base.py  prod_common.py  prod_request.py  productVars.py  version.py
swifttools/xrt_prods/: ChangeLog.md  README.md  __init__.py  prod_base.py  prod_common.py  prod_request.py  productVars.py  version.py
swifttools/xrt_prods/APIDocs/: CancelJob.md  History.md  JobRequestExamples1.md  JobRequestExamples2.md  JobStatus.md  README.md  RequestJob.md  RetrieveProducts.md  ReturnData.md  ReturnExamples.md  tutorial.md
swifttools/xrt_prods/docs/: cmd.txt  conf.py  fixAPI.pl  modules.rst  xrt_prods.rst
swifttools/xrt_prods/pyDocs/: README.md  RequestJob.md  RetrieveProducts.md  ReturnData.md  advanced.md  fullAPI.md  tutorial.md
tests/: conftest.py
tests/swift_too/: test_query_job.py
tests/swift_too/api/: test_api_common.py  test_api_functions.py  test_resolve.py
tests/swift_too/base/: conftest.py  test_common.py  test_common2.py  test_functions.py  test_repr.py  test_schemas.py  test_status.py
tests/swift_too/query_job/: conftest.py  test_query_job.py
tests/swift_too/swift/: test_calendar.py  test_clock.py  test_data.py  test_datetime.py  test_guano.py  test_instruments.py  test_planquery.py  test_requests.py  test_resolve.py  test_swift_obsquery.py  test_swift_saa.py  test_swift_saa2.py  test_toorequest.py  test_toorequest_additional.py  test_uvot.py  test_visquery.py
tests/swift_too/swift_clock/: test_swift_clock.py
tests/swift_too/swift_data/: test_swift_data.py
tests/swift_too/swift_datetime/: test_swift_datetime.py
tests/swift_too/swift_guano/: test_swift_guano.py
tests/swift_too/swift_planquery/: test_swift_planquery.py
tests/swift_too/swift_saa/: test_swift_saa.py
tests/swift_too/swift_schemas/: test_swift_schemas.py
tests/swift_too/swift_toorequest/: test_swift_toorequest.py
(+75 files in other folders)
