[metadata]
name = swifttools 
version = 3.0.2
description = Tools for users of the Swift satellite
long_description = file: README.md
long_description_content_type = text/markdown
author = Phil A. Evans
author_email = pae9@leicester.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
    Natural Language :: English
url = https://gitlab.com/DrPhilEvans/swifttools

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
python_requires = >= 3.6
install_requires = 
    requests 
    python-jose 
    pandas 
    tabulate 
    numpy

[bdist_wheel]
universal = 0
python-tag = py36
